--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,42 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Latero</title>
-    <style>
-      body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-        padding: 16px;
-        width: 220px;
-        background: #0f172a;
-        color: white;
-      }
 
-      h3 {
-        margin: 0 0 12px 0;
-        font-size: 16px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Latero</title>
+  <style>
+    :root {
+      --color-bg: #0f172a;
+      --color-primary: #4f46e5;
+      --color-text: #f8fafc;
+      --color-border: rgba(255, 255, 255, 0.1);
+    }
 
-      button {
-        width: 100%;
-        padding: 10px;
-        border-radius: 8px;
-        border: none;
-        cursor: pointer;
-        font-size: 14px;
-        background: white;
-        color: #0f172a;
-      }
+    body {
+      font-family: system-ui, -apple-system, sans-serif;
+      padding: 16px;
+      width: 260px;
+      background: var(--color-bg);
+      color: var(--color-text);
+      margin: 0;
+    }
 
-      button:hover {
-        opacity: 0.9;
-      }
-    </style>
-  </head>
-  <body>
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 16px;
+    }
+
+    .header img {
+      width: 24px;
+      height: 24px;
+    }
+
+    .header h3 {
+      margin: 0;
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .field {
+      margin-bottom: 12px;
+    }
+
+    label {
+      display: block;
+      font-size: 12px;
+      color: #94a3b8;
+      margin-bottom: 4px;
+    }
+
+    textarea,
+    input {
+      width: 100%;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid var(--color-border);
+      border-radius: 6px;
+      color: white;
+      padding: 8px;
+      box-sizing: border-box;
+      font-family: inherit;
+      font-size: 13px;
+    }
+
+    textarea {
+      height: 60px;
+      resize: none;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      background: var(--color-primary);
+      color: white;
+      transition: opacity 0.2s;
+      margin-top: 8px;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header">
+    <img src="icon48.png" alt="" />
     <h3>Latero</h3>
-    <button id="saveBtn">Save to Latero</button>
+  </div>
 
-    <script src="popup.js"></script>
-  </body>
+  <div class="field">
+    <label>Add a note (optional)</label>
+    <textarea id="noteInput" placeholder="Write something about this..."></textarea>
+  </div>
+
+  <div class="field">
+    <label>Set a reminder</label>
+    <input type="datetime-local" id="reminderInput" />
+  </div>
+
+  <button id="saveBtn">Save to Latero</button>
+
+  <script src="popup.js"></script>
+</body>
+
 </html>
